@@ -1,3 +1,8 @@
+2005-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/download/windows.html: Reword Windows problem a bit after
+	reading a newsgroup post.
+
 2005-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/check-translation.py: Actually add.
